--- a/translations/frontend-app-discussions/src/i18n/messages/ru.json
+++ b/translations/frontend-app-discussions/src/i18n/messages/ru.json
@@ -43,8 +43,8 @@
   "discussions.page.title": "Обсуждения | {siteName}",
   "navigation.course.tabs.label": "Материалы курса",
   "discussions.topics.backAlt": "Вернуться к списку тем",
-  "discussions.topics.discussions": "{count, множественное число, =0 {Обсуждение} one {# Обсуждение} Other {# Обсуждений} }",
-  "discussions.topics.questions": "{count, множественное число, =0 {Вопрос} one {# Вопрос} Other {# Вопросов} }",
+  "discussions.topics.discussions": "{count, plural, =0 {Обсуждение} one {# Осуждение} other {# Обсуждения} }",
+  "discussions.topics.questions": "{count, plural, =0 {Вопрос} one {# Вопрос} other {# Вопросы} }",
   "discussions.topics.reported": "{reported} сообщил",
   "discussions.topics.previouslyReported": "{previouslyReported} сообщалось ранее",
   "discussions.topics.find.label": "Поиск тем",
@@ -64,20 +64,20 @@
   "discussions.learner.mostActivity": "Большая активность",
   "discussions.learner.reportedActivity": "Сообщенная активность",
   "discussions.learner.recentActivity": "Недавняя активность",
-  "discussions.learner.sortFilterStatus": "Все учащиеся отсортированы по {сортировать, выбирать, отмечать {заявленную активность} активность {наибольшую активность} другое { {sort} } }",
+  "discussions.learner.sortFilterStatus": "Все учащиеся отсортированы по {sort, select, flagged {сообщенная активность} activity {наибольшая актинвость} other {{sort}} }",
   "discussion.learner.allActivity": "Вся деятельность",
   "discussion.learner.posts": "Сообщения",
   "discussions.comments.comment.addComment": "Добавить комментарий",
   "discussions.comments.comment.addResponse": "Добавить ответ",
   "discussions.comments.comment.abuseFlaggedMessage": "Контент отправлен на рассмотрение сотрудникам",
   "discussions.actions.back.alt": "Обратно к списку",
-  "discussions.comments.comment.responseCount": "{num, множественное число, =0 {Нет ответов} one {Показано # ответа}other {Показано # ответа} }",
-  "discussions.comments.comment.endorsedResponseCount": "{num, множественное число, =0 {Нет одобренных ответов} one {Показано # одобренных ответов}other {Показано # одобренных ответов} }",
+  "discussions.comments.comment.responseCount": "{num, plural, =0 {Нет ответов} one {Показать # ответ} other {Showing # responses} }",
+  "discussions.comments.comment.endorsedResponseCount": "{num, plural, =0 {Нет одобренных ответов} one {Показать # одобренный ответ} other {Показать # одобренные ответы} }",
   "discussions.comments.comment.loadMoreComments": "Загрузить больше комментариев",
   "discussions.comments.comment.loadMoreResponses": "Загрузить больше ответов",
-  "discussions.comments.comment.visibility": "Это сообщение видно пользователям {group, select, null {Everyone}other { {group} } }.",
-  "discussions.comments.comment.postedTime": "{postType, select, обсуждение {Обсуждение} вопрос {Вопрос} другое { {postType} } } опубликовал {relativeTime} автор",
-  "discussions.comments.comment.commentTime": "Размещено {relativeTime}",
+  "discussions.comments.comment.visibility": "Это сообщение видно пользователям {group, select, null {Всем}other { {group} } }.",
+  "discussions.comments.comment.postedTime": "{postType, select, discussion {Обсуждение} question {Вопрос} other {{postType}} } опубликовано {relativeTime} автором",
+  "discussions.comments.comment.commentTime": "Опубликовано {relativeTime}",
   "discussions.comments.comment.answer": "Ответ",
   "discussions.comments.comment.answeredlabel": "Отмечено как ответивший",
   "discussions.comments.comment.endorsed": "Одобрено",
@@ -160,9 +160,9 @@
   "discussions.post.unfollow.description": "ты не подписан на этот пост",
   "discussions.app.title": "Обсуждения",
   "discussions.posts.actionBar.searchAllPosts": "Поиск по всем темам",
-  "discussions.posts.actionBar.search": "{page, select, topics {Search topics} сообщения {Search all posts} учащиеся {Search learners} Мои сообщения {Search all posts} другое {{page}} }",
-  "discussions.actionBar.searchInfo": "Показаны результаты {count} для &quot; {text} &quot;",
-  "discussions.actionBar.searchRewriteInfo": "По запросу &quot; {searchString} &quot; результатов не найдено. Показаны результаты {count} для &quot; {textSearchRewrite} &quot;.",
+  "discussions.posts.actionBar.search": "{page, select, topics {Поиск тем} posts {Поиск по всем темам} learners {Поиск обучающихся} myPosts {Поиск по всем темам} other {{page}} }",
+  "discussions.actionBar.searchInfo": "Показ {count} результатов для \"{text}\"",
+  "discussions.actionBar.searchRewriteInfo": "Не найдено результатов для \"{searchString}\". Показ {count} результатов для \"{textSearchRewrite}\".",
   "discussions.actionBar.searchInfoSearching": "Поиск...",
   "discussions.actionBar.clearSearch": "Четкие результаты",
   "discussion.posts.actionBar.add": "Добавить публикацию",
