--- a/translations/frontend-app-discussions/src/i18n/messages/ru.json
+++ b/translations/frontend-app-discussions/src/i18n/messages/ru.json
@@ -64,14 +64,14 @@
   "discussions.learner.mostActivity": "Большая активность",
   "discussions.learner.reportedActivity": "Сообщенная активность",
   "discussions.learner.recentActivity": "Недавняя активность",
-  "discussions.learner.sortFilterStatus": "Все учащиеся отсортированы по {sort, select, flagged {сообщенная активность} activity {наибольшая актинвость} other {{sort}} }",
+  "discussions.learner.sortFilterStatus": "Все учащиеся отсортированы по {sort, select, flagged {сообщенная активность} activity {наибольшая активность} other {{sort}} }",
   "discussion.learner.allActivity": "Вся деятельность",
   "discussion.learner.posts": "Сообщения",
   "discussions.comments.comment.addComment": "Добавить комментарий",
   "discussions.comments.comment.addResponse": "Добавить ответ",
   "discussions.comments.comment.abuseFlaggedMessage": "Контент отправлен на рассмотрение сотрудникам",
   "discussions.actions.back.alt": "Обратно к списку",
-  "discussions.comments.comment.responseCount": "{num, plural, =0 {Нет ответов} one {Показать # ответ} other {Showing # responses} }",
+  "discussions.comments.comment.responseCount": "{num, plural, =0 {Нет ответов} one {Показать # ответ} other {Показать # ответы} }",
   "discussions.comments.comment.endorsedResponseCount": "{num, plural, =0 {Нет одобренных ответов} one {Показать # одобренный ответ} other {Показать # одобренные ответы} }",
   "discussions.comments.comment.loadMoreComments": "Загрузить больше комментариев",
   "discussions.comments.comment.loadMoreResponses": "Загрузить больше ответов",
