--- a/translations/frontend-app-learner-dashboard/src/i18n/messages/ru.json
+++ b/translations/frontend-app-learner-dashboard/src/i18n/messages/ru.json
@@ -62,7 +62,7 @@
   "learner-dash.selectSession.leaveSessionOption": "Выйти из сеанса",
   "learner-dash.selectSession.nevermind": "Неважно",
   "learner-dash.selectSession.confirmSession": "Подтвердить сеанс",
-  "WidgetSidebar.lookingForChallengePrompt": "Ищете новый вызов?",
+  "WidgetSidebar.lookingForChallengePrompt": "Нее видите курс?",
   "WidgetSidebar.findCoursesButton": "Найти курс {arrow}",
   "ProductRecommendations.recommendationsHeading": "Вам также может понравиться",
   "ProductRecommendations.executiveEducationHeading": "Исполнительное образование",
@@ -74,8 +74,8 @@
   "RecommendationsPanel.recommendationsHeading": "Рекомендации для вас",
   "RecommendationsPanel.popularCoursesHeading": "Популярные курсы",
   "RecommendationsPanel.exploreCoursesButton": "Просмотреть курсы",
-  "Dashboard.NoCoursesView.lookingForChallengePrompt": "Ищете новый вызов?",
-  "Dashboard.NoCoursesView.exploreCoursesPrompt": "Изучите наши курсы, чтобы добавить их на панель инструментов.",
+  "Dashboard.NoCoursesView.lookingForChallengePrompt": "Не видите курс?",
+  "Dashboard.NoCoursesView.exploreCoursesPrompt": "Свяжитесь с нами по телефону 8 (495) 276-23-50 (доб. 407, 541) или по электронной почте myriver@eipp.ru",
   "Dashboard.NoCoursesView.exploreCoursesButton": "Просмотреть курсы",
   "Dashboard.NoCoursesView.bannerAlt": "Баннер Нет курсов",
   "leanerDashboard.confirmEmailBanner": "Подтвердить сейчас",
