--- a/translations/frontend-app-learning/src/i18n/messages/ru.json
+++ b/translations/frontend-app-learning/src/i18n/messages/ru.json
@@ -14,8 +14,8 @@
   "tours.button.okay": "Хорошо",
   "tours.button.beginTour": "Начать тур",
   "tours.button.launchTour": "Стартовый тур",
-  "tours.newUserModal.body": "Давайте совершим краткий обзор {siteName} , чтобы вы могли получить максимальную отдачу от курса.",
-  "tours.newUserModal.title.welcome": "Добро пожаловать в ваш",
+  "tours.newUserModal.body": "Ознакомьтесь с интерфейсом платформы {siteName}.",
+  "tours.newUserModal.title.welcome": "Навигатор по",
   "tours.button.skipForNow": "Пропустить",
   "learning.loading.failure": "Возникла ошибка загрузки курса.",
   "learning.loading": "Загрузка страницы курса...",
@@ -71,7 +71,7 @@
   "learning.goals.unsubscribe.goToDashboard": "Перейти к панели управления",
   "learning.goals.unsubscribe.header": "Вы отписались от напоминаний о целях",
   "learning.goals.unsubscribe.loading": "Отмена подписки…",
-  "learning.outline.sequence-due-date-set": "{description} из-за {assignmentDue}",
+  "learning.outline.sequence-due-date-set": "{description} к {assignmentDue}",
   "learning.outline.sequence-due-date-not-set": "{description}",
   "learning.outline.dates.all": "Посмотреть все даты курса",
   "learning.outline.goalButton.casual.text": "1 день в неделю",
@@ -303,9 +303,9 @@
   "progress.weight": "Вес",
   "progress.weightedGrade": "Взвешенная оценка",
   "progress.weightedGradeSummary": "Сводка вашей текущей взвешенной оценки",
-  "progress.relatedLinks.datesCard.description": "Просмотр расписания сроков сдачи курса и предстоящих заданий.",
+  "progress.relatedLinks.datesCard.description": "Просмотр расписания курса и предстоящих заданий.",
   "progress.relatedLinks.datesCard.link": "Даты",
-  "progress.relatedLinks.outlineCard.description": "Обзор содержания вашего курса с высоты птичьего полета.",
+  "progress.relatedLinks.outlineCard.description": "Обзор содержания вашего курса.",
   "progress.relatedLinks.outlineCard.link": "Структура курса",
   "progress.relatedLinks": "Ссылки по теме",
   "unit.bookmark.button.add.bookmark": "Добавить страницу в мои закладки",
